# content-alchemist

./: .env  README.md  main.py  pyproject.toml  requirements.txt  test_translation.py
Materia_Laboris/: __init__.py  akkumulator.py  rosetta.py
Quintessenz/: prompting_clean.md
alchemist/: __init__.py  alchemist.py
