[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "content-alchemist"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A Python tool to fetch, extract, and save content from web articles"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.9.3",
    "requests>=2.25.1",
    "html2text>=2025.4.15",
]

[project.urls]
"Homepage" = "https://github.com/Jakolo121/content-alchemist"
"Bug Tracker" = "https://github.com/Jakolo121/content-alchemist/issues"

[tool.setuptools]
package-dir = {"" = "alchemist"}
